azure/sawtooth/sawtooth-pbft/ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-sw0
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: sawtooth-0.com
    http:
      paths:
      - backend:
          serviceName: sawtooth-0
          servicePort: 8008

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-sw1
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: sawtooth-1.com
    http:
      paths:
      - backend:
          serviceName: sawtooth-1
          servicePort: 8008

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-sw2
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: sawtooth-2.com
    http:
      paths:
      - backend:
          serviceName: sawtooth-2
          servicePort: 8008

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-sw3
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: sawtooth-3.com
    http:
      paths:
      - backend:
          serviceName: sawtooth-3
          servicePort: 8008

---
